force-app/src/objects/npsp__Level__c.object
<CustomObject>
    <description>Tracks the definition of levels, for any object.</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this Level is currently in use.</description>
        <inlineHelpText>Whether this Level is currently in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <description>Describes what this Level is for, or what it means to achieve this Level.</description>
        <inlineHelpText>Describes what this Level is for, or what it means to achieve this Level.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Engagement Plan Template to apply to the Target Object when this Level is achieved.</description>
        <inlineHelpText>The Engagement Plan Template to apply to the Target Object when this Level is achieved.</inlineHelpText>
        <label>Engagement Plan Template</label>
        <referenceTo>npsp__Engagement_Plan_Template__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Level_Field__c</fullName>
        <description>Indicates which field to use on the target object to store the current Level.</description>
        <inlineHelpText>The field (developer name) on the Target object to store the lookup to the current Level.  Note that this field implicitly defines the “Ladder” that this Level is part of.</inlineHelpText>
        <label>Level Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Maximum_Amount__c</fullName>
        <description>The amount the value must be below for NPSP to assign this Level. If this field is empty, NPSP will assign this Level for any amount greater than or equal to this Level&apos;s Minimum Amount.</description>
        <inlineHelpText>The maximum amount the value must be below to be assigned this Level.  If empty, then any amount greater than or equal to this Level&apos;s Minimum Amount will assign this Level.</inlineHelpText>
        <label>Maximum Amount (&lt;)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Minimum_Amount__c</fullName>
        <description>The minimum amount needed for NPSP to assign this Level. If this field is empty, then NPSP will assign this Level to any amount less than this Level&apos;s Maximum Amount.</description>
        <inlineHelpText>The minimum amount to be assigned this Level.  If empty, then any amount less than this Level&apos;s Maximum Amount will assign this Level.</inlineHelpText>
        <label>Minimum Amount (&gt;=)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Previous_Level_Field__c</fullName>
        <description>Indicates which field to use on the target object to store the previous Level.</description>
        <inlineHelpText>The field (developer name) on the Target object to store the lookup to the previous Level the object had.  Optional.</inlineHelpText>
        <label>Previous Level Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Source_Field__c</fullName>
        <description>The target object&apos;s field (developer name) that defines the amount and timeframe to base this Level on.</description>
        <inlineHelpText>The target object&apos;s field (developer name) that defines the amount and timeframe to base this Level on.</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Target__c</fullName>
        <description>The object that this Level applies to.</description>
        <inlineHelpText>The object that this Level applies to.</inlineHelpText>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Target__c</columns>
        <columns>npsp__Source_Field__c</columns>
        <columns>npsp__Level_Field__c</columns>
        <columns>npsp__Minimum_Amount__c</columns>
        <columns>npsp__Maximum_Amount__c</columns>
        <columns>npsp__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>npsp__Target_Required</fullName>
        <active>true</active>
        <description>The Target object field must be specified</description>
        <errorConditionFormula>ISBLANK(TEXT(npsp__Target__c))</errorConditionFormula>
        <errorDisplayField>npsp__Target__c</errorDisplayField>
        <errorMessage>Target is a required field on Level.  Please specify the Target object for this Level.</errorMessage>
    </validationRules>
</CustomObject>